--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -2,8 +2,20 @@ h1{
     font-family: 'Permanent Marker', cursive;
 }
 
+.title{
+    color:#ff1ac6;
+    font-size: 64px;
+    text-shadow:6px 4px #330033;
+    opacity: .8;
+}
+
+h2{
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
 svg{
     opacity: .8;
+    margin-right: 13px;
 }
 
 div.contact{
@@ -12,5 +24,5 @@ div.contact{
 
 svg:hover{
     opacity:1;
-    transition: .3s
+    transition: .2s
 }
