neon glow text oooo

--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -3,13 +3,29 @@ h1{
 }
 
 .title{
-    color:#ff307b;
-    font-size: 64px;
-    text-shadow:6px 4px #1a0f0e;
+  
+    font-size: 48px;
+    font-family: 'Rock Salt', cursive;
     position: absolute;
     bottom: 70%;
     z-index: 2;
+    color: #fff;
+    
+    /* Neon glow webkits */
+    -webkit-animation: neon 1.5s ease-in-out infinite alternate;
+    -moz-animation: neon 1.5s ease-in-out infinite alternate;
+    animation: neon 1.5s ease-in-out infinite alternate;
 }
+
+@keyframes neon {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+  }
+  
 
 h2{
     font-family: 'Nanum Gothic', sans-serif;
