--- a/src/Components/Decorations/style.css
+++ b/src/Components/Decorations/style.css
@@ -25,6 +25,7 @@
     border-right: 60px solid transparent;
 	height: 0;
     width: 800px;
+    border-radius: 5px;
     position: absolute;
     bottom: 70%;
     left:-20%;
