title animation online

--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -2,29 +2,20 @@ h1{
     font-family: 'Permanent Marker', cursive;
 }
 
+
+
 .title{
   
     font-size: 48px;
-    font-family: 'Rock Salt', cursive;
+    color: #f50093;
+    font-family: 'Permanent Marker', sans-serif;
     position: absolute;
     bottom: 70%;
     z-index: 2;
-    color: #fff;
-    
-    /* Neon glow webkits */
-    -webkit-animation: neon 1.5s ease-in-out infinite alternate;
-    -moz-animation: neon 1.5s ease-in-out infinite alternate;
-    animation: neon 1.5s ease-in-out infinite alternate;
+    /* -webkit-text-stroke: 2px black; */
 }
 
-@keyframes neon {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-    }
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-    }
-  }
+
   
 
 h2{
