--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -7,16 +7,33 @@ h1{
 .title{
   
     font-size: 48px;
-    color: #f50093;
-    font-family: 'Permanent Marker', sans-serif;
-    position: absolute;
-    bottom: 70%;
+    color: #adf7ff;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    bottom:100px;
     z-index: 2;
-    /* -webkit-text-stroke: 2px black; */
 }
 
 
-  
+
+.subtitle{
+    font-family: 'Yellowtail', cursive;
+    position: relative;
+    bottom: 70px;
+    color:#ffffff;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    from {
+      text-shadow: 0 0 10px #e60073, 0 0 20px #e60073, 0 0 30px #ebb9d2, 0 0 40px #ebb9d2, 0 0 50px #ebb9d2;
+    }
+    to {
+      text-shadow: 0 0 20px #e60073, 0 0 30px #ffffff, 0 0 40px #ffffff, 0 0 50px #ffffff, 0 0 60px #ffffff;
+    }
+  }
 
 h2{
     font-family: 'Nanum Gothic', sans-serif;
