--- a/src/Components/Decorations/style.css
+++ b/src/Components/Decorations/style.css
@@ -69,8 +69,12 @@
 }
 
 /* TABLET/CELLPHONE SCEEN SIZES */
-@media only screen and (max-width: 1024px) {
-.circle {display:none}
+@media only screen and (max-width: 1194px) {
+.circle { position: relative; top: 50px; left:90px}
 .line {display: none}
 .triangle {display:none}
+}
+
+@media only screen and (max-width: 768px){
+    .circle {position: relative; left:-20px; top:60px}
 }
