--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -56,3 +56,12 @@ svg:hover{
     opacity:1;
     transition: .2s
 }
+
+@media only screen and (max-width: 1194px) {
+.title{position: relative;}
+}
+
+@media only screen and (max-width: 768px){
+    .title{font-size:44px}
+    .subtitle{font-size:30px}
+}
