--- a/src/Components/Decorations/style.css
+++ b/src/Components/Decorations/style.css
@@ -78,3 +78,7 @@
 @media only screen and (max-width: 768px){
     .circle {position: relative; left:-20px; top:60px}
 }
+
+@media only screen and (max-width: 990px){
+    .circle {position: relative; left:25px; top:75px}
+}
