--- a/portfolio/src/app/footer/footer.component.html
+++ b/portfolio/src/app/footer/footer.component.html
@@ -1,6 +1,14 @@
-
 <div class="container">
-    <a>
-        <img class = "logo" src = "../../assets/images/LI-In-Bug.png">
-    </a>
+    <div class="row justify-content-center align-items-center">
+        <div class="col-1">
+        <a>
+            <img width="76px" class="logo" src="../../assets/images/LinkedIn-Icon-Black-Logo.wine.svg">
+        </a>
+    </div>
+    <div class="col-1">
+        <a>
+            <img width="40px" class="logo" src="../../assets/images/GitHub-Mark-64px.png">
+        </a>
+    </div>
+    </div>
 </div>
