--- a/portfolio/src/app/nav/nav.component.html
+++ b/portfolio/src/app/nav/nav.component.html
@@ -1,9 +1,6 @@
 <nav>
-  <div class='navbar fixed-left'>
-<ul class="nav flex-column">
-  <li class='nav-item'>
-    <a class='navbar-brand'>Brand</a>
-  </li>
+  <div class='navbar justify-content-end'>
+<ul class="nav flex-row ">
   <li class="nav-item">
     <a class="nav-link" href="#">About</a>
   </li>
