added skills component and other changes

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -237,8 +237,9 @@
 <body class="d-flex flex-column h-100">
 <main class="content" role="main">
 
-
+<div class="container">
 <router-outlet></router-outlet>
+</div>
 
 </main>
 
