--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -1,1 +1,4 @@
-<p>Kathleen Tonner is a Front-End Web Developer</p>
+<p><b>Kathleen Tonner</b> is a Full-Stack Web Developer from Orlando Florida</p>
+<p>After graduating from the UCF Coding Bootcamp, she has spen the last two years refining her skills
+    and creating responsive, clean, and effective code.
+</p>
