--- a/portfolio/src/app/nav/nav.component.html
+++ b/portfolio/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class='navbar justify-content-end'>
 <ul class="nav flex-row ">
   <li class="nav-item">
-    <a class="nav-link" href="#">About</a>
+    <a class="nav-link" href="about">About</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="work">Work</a>
