--- a/portfolio/src/app/skills/skills.component.html
+++ b/portfolio/src/app/skills/skills.component.html
@@ -1,1 +1,21 @@
-<p>skills works!</p>
+<div class="row d-flex">
+    <div class="col-4 rounded-circle pinkCircle px-5 py-4">
+        <div class=" d-flex align-items-center flex-column">
+        <h2>Front-End</h2>
+            <p>React.js</p>
+            <p>Angular</p>
+            <p>Javascript</p>
+            <p>HTML/CSS</p>
+        </div>
+    </div>
+    <div class="col-4">
+        <h2>Back-End</h2>
+            <p>Node.js</p>
+            <p>SQL</p>
+            <p>MongoDB</p>
+    </div>
+    <div class="col-4">
+        <h2>Certifications and Tools</h2>
+        <p>Scrum Master (PSMI)</p>
+    </div>
+</div>
