--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -31,3 +31,14 @@ footer{
 .weatherImg{
     object-position: 50% 50%
 }
+
+//Skills
+
+.pinkCircle{
+    background:#ee4266;
+    color:white;
+}
+
+ul.nobullets{
+    list-style-type: none;
+}
