--- a/portfolio/src/app/home-page/home-page.component.html
+++ b/portfolio/src/app/home-page/home-page.component.html
@@ -1,4 +1,14 @@
-<div class="text-light">
-<h1>Kathleen Tonner</h1>
-<h3>Front-End Developer</h3>
-</div>
+
+    <div class="box">
+
+        <div class="title">
+            <span class="block"></span>
+            <h1>Kaio Almeida<span></span></h1>
+        </div>
+
+        <div class="role">
+            <div class="block"></div>
+            <p>UI Dev designer</p>
+        </div>
+
+    </div>
