adding module component

--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -1,4 +1,8 @@
+<div class="row">
+    <div class="col">
 <p><b>Kathleen Tonner</b> is a Full-Stack Web Developer from Orlando Florida</p>
-<p>After graduating from the UCF Coding Bootcamp, she has spen the last two years refining her skills
+<p>After graduating from the UCF Coding Bootcamp, she has spent the last two years refining her skills
     and creating responsive, clean, and effective code.
 </p>
+</div>
+</div>
