--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -234,7 +234,7 @@
 <!-- Toolbar -->
 <navigation></navigation>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex">
 <main class="content" role="main">
 
 <div class="container">
