--- a/portfolio/src/app/skills/skills.component.html
+++ b/portfolio/src/app/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div class="row d-flex">
     <div class="col-4 d-flex align-items-center flex-column">
-        <h2>Front-End</h2>
-    <div class="align-items-center rounded-circle pinkCircle px-5">
+        <h2 class="skillTitle">Front-End</h2>
+    <div class="align-items-center rounded-circle blueCircle px-5">
             <p>React.js</p>
             <p>Angular</p>
             <p>Javascript</p>
@@ -9,13 +9,15 @@
         </div>
     </div>
     <div class="col-4 d-flex align-items-center flex-column">
-        <h2>Back-End</h2>
+        <h2 class="skillTitle">Back-End</h2>
             <p>Node.js</p>
             <p>SQL</p>
             <p>MongoDB</p>
     </div>
     <div class="col-4 d-flex align-items-center flex-column">
-        <h2>Certifications and Tools</h2>
+        <h2 class="skillTitle">Certifications and Tools</h2>
         <p>Scrum Master (PSMI)</p>
+        <p>Ajax</p>
+        <p>JQuery</p>
     </div>
 </div>
