--- a/portfolio/src/app/work/work.component.html
+++ b/portfolio/src/app/work/work.component.html
@@ -2,8 +2,7 @@
     <div class="row justify-content-around">
         <div class="col-6">
             <img class="projectImg soapImg" width="100%" height="300px" src={{soapboxURL}}
-                ng-init="source='../../assets/images/soapbox.png'"
-                (mouseover)="changeURL('../../assets/images/soapbox.gif')" (mouseout)="resetSoapbox()" />
+                ng-init="source='../../assets/images/soapbox.png'"/>
         </div>
         <div class="col-6">
             <img class="projectImg weatherImg" width="100%" height="300px" src="../../assets/images/weatherdash.png" />
@@ -13,7 +12,7 @@
         <div class="col-6">
             <img class="projectImg soapImg" width="100%" height="300px" src={{soapboxURL}}
                 ng-init="source='../../assets/images/soapbox.png'"
-                (mouseover)="changeURL('../../assets/images/soapbox.gif')" (mouseout)="resetSoapbox()" />
+                 />
         </div>
         <div class="col-6">
             <img class="projectImg weatherImg" width="100%" height="300px" src="../../assets/images/weatherdash.png" />
