--- a/portfolio/src/app/home-page/home-page.component.html
+++ b/portfolio/src/app/home-page/home-page.component.html
@@ -1,14 +1,16 @@
-
-    <div class="box">
-
-        <div class="title">
-            <span class="block"></span>
-            <h1>Kaio Almeida<span></span></h1>
+<div class="row h-100">
+    <div class="col-12">
+        <div class="containerHomeAnimation">
+            <div class="box">
+                <div class="title">
+                    <span class="block"></span>
+                    <h1>Kathleen Tonner<span></span></h1>
+                </div>
+                <div class="role">
+                    <div class="block"></div>
+                    <p>Full-Stack Developer</p>
+                </div>
+            </div>
         </div>
-
-        <div class="role">
-            <div class="block"></div>
-            <p>UI Dev designer</p>
-        </div>
-
     </div>
+</div>
