--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -27,6 +27,18 @@ h1,h2,h3{
     color:#46237a;
 }
 
+//Navbar
+
+.nav-link{
+    font-family:"Quicksand";
+    font-weight:400;
+    font-size:16px;
+}
+
+.nav-link:hover{
+    color:#6E44FF;
+}
+
 //Work
 
 .projectImg{
@@ -34,7 +46,7 @@ h1,h2,h3{
     overflow:hidden;
 }
 .soapImg{
-    object-position: 10% 50%;
+    object-position: -54px;
 }
 
 .weatherImg{
@@ -43,12 +55,19 @@ h1,h2,h3{
 
 //Skills
 
-.pinkCircle{
-    background:#ee4266;
-    color:white;
+.blueCircle{
+    background:#91e5f6;
+    color:#0E90AA;
+    border: solid 2px #0E90AA;
     text-align:center;
     font-family: 'Quicksand';
     font-weight:500;
+    padding:10px;
+    font-size:12px;
+}
+
+.skillTitle{
+    color:white;
 }
 
 ul.nobullets{
@@ -56,3 +75,226 @@ ul.nobullets{
 }
 
 //Typing Animation
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap');
+
+
+body, html {
+   overflow: hidden;
+}
+
+.containerHomeAnimation {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top:40%;
+
+  .box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    .title {
+      width: 100%;
+      position: relative;
+      display: flex;
+      align-items: center;
+      height: 50px;
+
+      .block {
+        width: 0%;
+        height: inherit;
+        background: #FFD972;
+        position: absolute;
+        animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+        display: flex;
+      }
+
+      h1 {
+        font-family: 'Quicksand';
+        font-weight:700;
+        color: #fff;
+        -webkit-animation: mainFadeIn 2s forwards;
+        -o-animation: mainFadeIn 2s forwards;
+        animation: mainFadeIn 2s forwards;
+        animation-delay: 1.6s;
+        opacity: 0;
+        display: flex;
+        align-items: baseline;
+        position: relative;
+        font-size:48px;
+
+        span {
+          width:0px;
+          height: 0px;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+
+          background: #FFD972;
+          -webkit-animation: load 0.6s cubic-bezier(.74, .06, .4, .92) forwards;
+          animation: popIn 0.8s cubic-bezier(.74, .06, .4, .92) forwards;
+          animation-delay: 2s;
+          margin-left: 5px;
+          margin-top: -10px;
+          position: absolute;
+          bottom: 13px;
+          right: -12px;
+
+        }
+      }
+    }
+
+    .role {
+      width: 100%;
+      position: relative;
+      display: flex;
+      align-items: center;
+      height: 30px;
+      margin-top: -10px;
+      color:#6E44FF;
+
+      .block {
+        width: 0%;
+        height: inherit;
+        background: #e91e63;
+        position: absolute;
+        animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+        animation-delay: 2s;
+        display: flex;
+      }
+
+      p {
+        animation: secFadeIn 2s forwards;
+        animation-delay: 3.2s;
+        opacity: 0;
+        font-weight: 500;
+        font-family: 'Quicksand';
+        color: #ffffff;
+        font-size: 16px;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+        padding-top:10px;
+      }
+    }
+  }
+}
+
+
+@keyframes mainBlock {
+  0% {
+    width: 0%;
+    left: 0;
+
+  }
+  50% {
+    width: 100%;
+    left: 0;
+
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+
+@keyframes secBlock {
+  0% {
+    width: 0%;
+    left: 0;
+
+  }
+  50% {
+    width: 100%;
+    left: 0;
+
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+
+@keyframes mainFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+//Pop in circle, you can change its color here
+@keyframes popIn {
+  0% {
+    width: 0px;
+    height: 0px;
+    background: pink;
+    border: 0px solid #ddd;
+    opacity: 0;
+  }
+  50% {
+    width: 10px;
+    height: 10px;
+    background: pink;
+    opacity: 1;
+    bottom: 45px;
+  }
+   65% {
+      width: 7px;
+    height: 7px;
+      bottom: 0px;
+      width: 15px
+   }
+   80% {
+      width: 10px;
+    height: 10px;
+      bottom: 20px
+   }
+  100% {
+    width: 7px;
+    height: 7px;
+    background: pink;
+    border: 0px solid #222;
+    bottom: 13px;
+
+  }
+}
+
+@keyframes secFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+
+@keyframes top {
+  0% {
+    opacity: 0;
+     bottom: -80px
+  }
+  100% {
+    opacity: 1;
+     bottom: 0px
+
+  }
+}
+
+@keyframes icon {
+  0% {
+    opacity: 0;
+     transform: scale(0.0);
+  }
+   50% {
+      opacity: 1;
+     transform: scale(1.3) rotate(-02deg);
+   }
+  100% {
+    opacity: 1;
+     bottom: 0px;
+  }
+}
